IDE automated cleanup